tests/baselines/reference/circularGetAccessor(noimplicitany=false).errors.txt
circularGetAccessor.ts(2,9): error TS2502: 'foo' is referenced directly or indirectly in its own type annotation.


==== circularGetAccessor.ts (1 errors) ====
    declare class C {
        get foo(): typeof this.foo;
            ~~~
!!! error TS2502: 'foo' is referenced directly or indirectly in its own type annotation.
    }
    